included some css style

--- a/31_3_2021 second page.html
+++ b/31_3_2021 second page.html
@@ -3,15 +3,16 @@
 
 <head>
     <title> Second workout</title>
+    <link rel="stylesheet" href="First04_04_2021.css">
 </head>
 
 <body>
     <h1>Balakumar</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Reprehenderit officiis obcaecati fugit voluptas in!
+    <p class="color" id="ide">Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Reprehenderit officiis obcaecati fugit voluptas in!
         Tempore deleniti perspiciatis, libero tenetur explicabo pariatur laboriosam iste ducimus nam repudiandae
         eligendi molestias doloremque saepe?</p>
     <h2>test</h2>
-    <span>
+    <span class="nextcolor">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium sed quam dolores consequuntur possimus
             quod magnam illum odio ab voluptatum velit, doloribus officia earum deleniti, qui iste ea reprehenderit
             illo!</p>
