--- a/Form.html
+++ b/Form.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="First04_04_2021.css">
     <title>Form 31/3/2021</title>
 </head>
 <body>
-    <h2>Registration Form</h2>
+    <h2 class="color">Registration Form</h2>
     <form action="/My Work">
     <p>
     <label> First Name:
@@ -65,7 +66,7 @@
         <input type="password" name="password" minlength="4" maxlength="8" required>
     </label>
 </p>
-<button>Submit</button>
+<button class="buttonstyle">Submit</button>
 </form>
 </body>
 </html>
